docker/trips/trips-trips-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trips-service
  namespace: api
  labels:
    app: trips
    component: trips
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: trips
    component: trips
